--- a/data/rules/cursos.yml
+++ b/data/rules/cursos.yml
@@ -39,35 +39,35 @@ rules:
     - intent: cursos_rep_redes
     - action: utter_cursos_rep_redes
 
-  - rule: cursos_sites_dd
+  - rule: cursos_site_dd
     steps:
-    - intent: cursos_sites_dd
-    - action: utter_cursos_sites_dd
+    - intent: cursos_site_dd
+    - action: utter_cursos_site_dd
 
-  - rule: cursos_sites_es
+  - rule: cursos_site_es
     steps:
-    - intent: cursos_sites_es
-    - action: utter_cursos_sites_es
+    - intent: cursos_site_es
+    - action: utter_cursos_site_es
 
-  - rule: cursos_sites_cc
+  - rule: cursos_site_cc
     steps:
-    - intent: cursos_sites_cc
-    - action: utter_cursos_sites_cc
+    - intent: cursos_site_cc
+    - action: utter_cursos_site_cc
 
-  - rule: cursos_sites_ec
+  - rule: cursos_site_ec
     steps:
-    - intent: cursos_sites_ec
-    - action: utter_cursos_sites_ec
+    - intent: cursos_site_ec
+    - action: utter_cursos_site_ec
 
-  - rule: cursos_sites_si
+  - rule: cursos_site_si
     steps:
-    - intent: cursos_sites_si
-    - action: utter_cursos_sites_si
+    - intent: cursos_site_si
+    - action: utter_cursos_site_si
 
-  - rule: cursos_sites_redes
+  - rule: cursos_site_redes
     steps:
-    - intent: cursos_sites_redes
-    - action: utter_cursos_sites_redes
+    - intent: cursos_site_redes
+    - action: utter_cursos_site_redes
 
   - rule: cursos_horas_complementares
     steps:
