--- a/data/nlu/bolsas.yml
+++ b/data/nlu/bolsas.yml
@@ -2,52 +2,33 @@ version: "3.1"
 
 nlu:
 
-
-- intent: como_funciona_pibic
+- intent: como_funciona_auxilio_bolsa
   examples: |
-    - Como funciona a bolsa PIBIC
-    - Quero saber como funciona o PIBIC
-    - Pode explicar a bolsa PIBIC?
-
-- intent: como_funciona_pibit
-  examples: |
-    - Como funciona a bolsa PIBIT
-    - Pode me explicar o que é o PIBIT?
-    - O que é e como funciona a bolsa PIBIT?
-
-- intent: como_funciona_pid
-  examples: |
-    - Como funciona a bolsa PID
-    - Pode me explicar o que é a bolsa PID?
-    - Quero saber mais sobre o PID
-
-- intent: como_funciona_bia
-  examples: |
-    - Como funciona o BIA
-    - Pode me explicar o que é o BIA?
-    - O que significa o BIA e como ele funciona?
-
-- intent: como_funciona_aux_emergencial
-  examples: |
-    - Como funciona o aux emergencial
-    - Pode explicar o auxílio emergencial?
-    - Quero saber mais sobre o aux emergencial
-
-- intent: como_funciona_aux_creche
-  examples: |
-    - Como funciona o aux creche
-    - O que é o auxílio creche?
-    - Pode me explicar como funciona o aux creche?
-
-- intent: como_funciona_aux_moradia
-  examples: |
-    - O que é o auxílio moradia?
-    - Como funciona o aux moradia
-    - Como funciona o auxilio moradia
-    - Quero saber como funciona o auxílio moradia
-    - Pode me explicar o que é o aux moradia?
-    - O que é o aux moradia?
-    - O que é o auxilio moradia?
+    - Como funciona a bolsa [PIBIC](auxilio-bolsa)
+    - Quero saber como funciona o [PIBIC](auxilio-bolsa)
+    - Pode explicar a bolsa [PIBIC](auxilio-bolsa)?
+    - Como funciona a bolsa [PIBIT](auxilio-bolsa)
+    - Pode me explicar o que é o [PIBIT](auxilio-bolsa)?
+    - O que é e como funciona a bolsa [PIBIT](auxilio-bolsa)?
+    - Como funciona a bolsa [PID](auxilio-bolsa)
+    - Pode me explicar o que é a bolsa [PID](auxilio-bolsa)?
+    - Quero saber mais sobre o [PID](auxilio-bolsa)
+    - Como funciona o [BIA](auxilio-bolsa)
+    - Pode me explicar o que é o [BIA](auxilio-bolsa)?
+    - O que significa o [BIA](auxilio-bolsa) e como ele funciona?
+    - Como funciona o [aux emergencial](auxilio-bolsa)
+    - Pode explicar o auxílio [emergencial](auxilio-bolsa)?
+    - Quero saber mais sobre o aux [emergencial](auxilio-bolsa)
+    - Como funciona o aux [creche](auxilio-bolsa)
+    - O que é o auxílio [creche](auxilio-bolsa)?
+    - Pode me explicar como funciona o aux [creche](auxilio-bolsa)?
+    - O que é o auxílio [moradia](auxilio-bolsa)?
+    - Como funciona o aux [moradia](auxilio-bolsa)
+    - Como funciona o auxilio [moradia](auxilio-bolsa)
+    - Quero saber como funciona o auxílio [moradia](auxilio-bolsa)
+    - Pode me explicar o que é o aux [moradia](auxilio-bolsa)?
+    - O que é o aux [moradia](auxilio-bolsa)?
+    - O que é o auxilio [moradia](auxilio-bolsa)?
 
 - intent: como_conseguir_bolsa
   examples: |
