--- a/endpoints.yml
+++ b/endpoints.yml
@@ -10,8 +10,8 @@
 # Server which runs your custom actions.
 # https://rasa.com/docs/rasa/custom-actions
 
-#action_endpoint:
-#  url: "http://localhost:5055/webhook"
+action_endpoint:
+  url: "http://localhost:5055/webhook"
 
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
@@ -31,6 +31,13 @@
 #    db: <name of the db within your mongo instance, e.g. rasa>
 #    username: <username used for authentication>
 #    password: <password used for authentication>
+tracker_store:
+      type: SQL
+      dialect: "postgresql"  # the dialect used to interact with the db
+      url: "postgres"
+      db: "rasa"  # path to your db
+      username:  "postgres"
+      password:  "1234" # password used for authentication
 
 # Event broker which all conversation events should be streamed to.
 # https://rasa.com/docs/rasa/event-brokers
