feat: add bolsas rules and increment stories

--- a/data/stories.yml
+++ b/data/stories.yml
@@ -15,6 +15,13 @@ stories:
       - intent: qual_contato
       - action: utter_qual_contato_psicologa
 
+  - story: HAHAHAHSifkdapodl
+    steps:
+      - intent: como_funciona_auxilio_bolsa
+        entities:
+          - auxilio-bolsa: PID
+      - action: utter_como_funciona_pid
+
 
 
 
