--- a/data/rules/cursos.yml
+++ b/data/rules/cursos.yml
@@ -39,35 +39,10 @@ rules:
     - intent: cursos_rep_redes
     - action: utter_cursos_rep_redes
 
-  - rule: cursos_site_dd
+  - rule: cursos_site
     steps:
-    - intent: cursos_site_dd
-    - action: utter_cursos_site_dd
-
-  - rule: cursos_site_es
-    steps:
-    - intent: cursos_site_es
-    - action: utter_cursos_site_es
-
-  - rule: cursos_site_cc
-    steps:
-    - intent: cursos_site_cc
-    - action: utter_cursos_site_cc
-
-  - rule: cursos_site_ec
-    steps:
-    - intent: cursos_site_ec
-    - action: utter_cursos_site_ec
-
-  - rule: cursos_site_si
-    steps:
-    - intent: cursos_site_si
-    - action: utter_cursos_site_si
-
-  - rule: cursos_site_redes
-    steps:
-    - intent: cursos_site_redes
-    - action: utter_cursos_site_redes
+    - intent: cursos_site
+    - action: utter_cursos_site
 
   - rule: cursos_horas_complementares
     steps:
